# tpmtool

./: CMakeLists.txt  CMakeSettings.json  README.md  tpmcmd.cpp  tpmcmd.hpp  tpmoswin.cpp  tpmspec.hpp  tpmstruc.hpp  tpmtool.cpp  tpmtool.hpp
